--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Computer Science club website for Shoreline Community College",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Shoreline-CS-Club-2021-2022/website/issues"
   },
-  "homepage": "https://github.com/Shoreline-CS-Club-2021-2022/website#readme"
+  "homepage": "https://github.com/Shoreline-CS-Club-2021-2022/website#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20"
+  }
 }
