--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
